# OBP-OPEY-II

./: .env  .env.example  .gitignore  NOTICE  README.md  checkpoints.db-shm  checkpoints.db-wal  pyproject.toml  requirements.txt
docs/: architecture.md  chat_log.md
src/: run_client.py  run_service.py  streamlit_app.py
src/.streamlit/: config.toml
src/agent/: __init__.py  agent_graph.py  agent_graph_no_obp_tools.py
src/agent/components/: chains.py  conditional_edges.py  edges.py  nodes.py  states.py  tools.py
src/agent/components/chains/: opey_chain.py
src/agent/components/sub_graphs/: retriever_config.py
src/agent/components/sub_graphs/endpoint_retrieval/: endpoint_retrieval_graph.py
src/agent/components/sub_graphs/endpoint_retrieval/components/: chains.py  edges.py  nodes.py  reducers.py  states.py
src/agent/components/sub_graphs/glossary_retrieval/: glossary_retrieval_graph.py
src/agent/components/sub_graphs/glossary_retrieval/components/: nodes.py  states.py
src/agent/utils/: config.py  model_factory.py
src/client/: __init__.py  client.py
src/schema/: __init__.py  schema.py
src/service/: __init__.py  auth.py  service.py
src/test/: test_asyncio_condition.py
src/utils/: chat_log.py  obp_utils.py  utils.py
