[tool.poetry]
name = "obp-opey-agent"
version = "0.1.0"
description = "An Agentic Bot for the OpenBankProject API"
authors = ["nemo <nemozak1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.39.0"
langchain = "^0.3.7"
langchain-openai = "^0.2.5"
langchain-core = "^0.3.15"
pydantic = "^2.9.2"
langchain-chroma = "^0.1.4"
uuid = "^1.30"
fastapi = "^0.115.4"
langsmith = "^0.1.139"
langgraph = "^0.2.44"
protobuf = "3.20.*"
langchain-anthropic = "^0.3.0"
langchain-ollama = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
